--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,9 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.jdbi', name: 'jdbi', version: '2.4.2'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.8.0'
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
 }
