--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,8 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.jdbi', name: 'jdbi', version: '2.4.2'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.6'
+
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.assertj', name: 'assertj-core', version: '3.8.0'
